Essaie Rapport de vol arrivé

--- a/.env
+++ b/.env
@@ -42,3 +42,8 @@ DATABASE_URL="postgresql://postgres:mdpprom13@127.0.0.1:5433/rapport_automatise?
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+###> knplabs/knp-snappy-bundle ###
+WKHTMLTOPDF_PATH=/usr/local/bin/wkhtmltopdf
+WKHTMLTOIMAGE_PATH=/usr/local/bin/wkhtmltoimage
+###< knplabs/knp-snappy-bundle ###
