--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ APP_SECRET=5a0ed073dd592701593ee868426c7076
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
-DATABASE_URL="postgresql://postgres:mdpprom13@127.0.0.1:5433/rapport_automatise?serverVersion=12&charset=utf8"
+DATABASE_URL="postgresql://postgres:mdpprom13@127.0.0.1:5432/rapport_automatise?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
@@ -47,3 +47,8 @@ DATABASE_URL="postgresql://postgres:mdpprom13@127.0.0.1:5433/rapport_automatise?
 WKHTMLTOPDF_PATH=/usr/local/bin/wkhtmltopdf
 WKHTMLTOIMAGE_PATH=/usr/local/bin/wkhtmltoimage
 ###< knplabs/knp-snappy-bundle ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+ MAILER_DSN=gmail+smtp://bvittorio37@gmail.com:elthor32@default?verify_peer=0
+###< symfony/google-mailer ###
