--- a/config/packages/knp_snappy.yaml
+++ b/config/packages/knp_snappy.yaml
@@ -2,8 +2,14 @@ knp_snappy:
     pdf:
         enabled:    true
         binary:      '"C:\Program Files\wkhtmltopdf\bin\wkhtmltopdf.exe"'
-        options:    []
+        options:    
+            no-outline: true
+            page-size: LETTER
+            # Recommended to set UTF-8 as default encoding :)
+            encoding: UTF-8
     image:
         enabled:    true
         binary:      '"C:\Program Files\wkhtmltopdf\bin\wkhtmltopdf.exe"'
         options:    []
+    temporary_folder: "%kernel.cache_dir%/snappy"
+    process_timeout: 80 # In seconds
