régularisation d'envoie mail avec génération de pdf

--- a/.env
+++ b/.env
@@ -50,5 +50,6 @@ WKHTMLTOIMAGE_PATH=/usr/local/bin/wkhtmltoimage
 
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
- MAILER_DSN=gmail+smtp://bvittorio37@gmail.com:elthor32@default?verify_peer=0
+MAILER_DSN=gmail+smtp://bvittorio37@gmail.com:wuqamnitjvezvsar@default?verify_peer=0 
+#MAILER_DSN=smtp://93b4200b58ea18:ac132907cd1ef5@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
 ###< symfony/google-mailer ###
