--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -50,5 +50,7 @@ when@test:
                 memory_cost: 10 # Lowest possible value for argon
 
         role_hierarchy:
-            ROLE_SUPER_ADMIN: ['ROLE_ADMIN','ROLE_USER']
-            ROLE_ADMIN: ['ROLE_USER']
+            ROLE_TECHNICIEN: ['ROLE_USER']
+            ROLE_MAGASINIER: ['ROLE_MAGASINIER']
+            ROLE_ADMIN: ['ROLE_ADMIN']
+            
